--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "@tanstack/react-query": "^5.85.8",
     "@vietmap/vietmap-gl-js": "^6.0.0-pre.1",
     "antd": "^5.26.5",
     "axios": "^1.10.0",
