--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "antd": "^5.26.5",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
     "maplibre-gl": "^5.6.1",
     "react": "^19.1.0",
