--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
+    "html2canvas": "^1.4.1",
     "i18next": "^25.5.2",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "maplibre-gl": "^5.6.1",
     "react": "^19.1.0",
@@ -40,6 +42,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/html2canvas": "^0.5.35",
+    "@types/jspdf": "^1.3.3",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
