--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
     "maplibre-gl": "^5.6.1",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.4.149",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.7.3",
