--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
     "trackasia-gl": "^2.0.1",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zzfx": "^1.3.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
