--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@stomp/stompjs": "^7.2.0",
     "@tanstack/react-query": "^5.87.1",
+    "@types/three": "^0.181.0",
     "@types/uuid": "^10.0.0",
     "@vietmap/vietmap-gl-js": "^6.0.1",
     "antd": "^5.26.5",
@@ -40,6 +41,7 @@
     "react-toastify": "^11.0.5",
     "socket.io-client": "^4.8.1",
     "sockjs-client": "^1.6.1",
+    "three": "^0.181.2",
     "trackasia-gl": "^2.0.1",
     "uuid": "^11.1.0"
   },
