--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "dayjs": "^1.11.18",
     "dotenv": "^17.2.1",
     "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.12.1",
     "i18next": "^25.5.2",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
