--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "@ant-design/icons": "^6.0.0",
+    "@ant-design/plots": "^2.6.6",
+    "@antv/g-plugin-rough-canvas-renderer": "^2.0.48",
+    "@antv/g2plot": "^2.4.35",
     "@reduxjs/toolkit": "^2.8.2",
     "@stomp/stompjs": "^7.2.0",
     "@tanstack/react-query": "^5.87.1",
