--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@ant-design/icons": "^6.0.0",
+    "@ant-design/icons": "^6.1.0",
     "@ant-design/plots": "^2.6.6",
     "@antv/g-plugin-rough-canvas-renderer": "^2.0.48",
     "@antv/g2plot": "^2.4.35",
@@ -21,7 +21,8 @@
     "@types/three": "^0.181.0",
     "@types/uuid": "^10.0.0",
     "@vietmap/vietmap-gl-js": "^6.0.1",
-    "antd": "^5.26.5",
+    "antd": "^6.0.1",
+    "antd-style": "^3.7.1",
     "axios": "^1.10.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
